# jamesbound

./: .gitignore  .hgignore  JamesBound.cabal  LICENSE  README.md  SYNTAX.md  TODO.md
examples/: apcps.pi  bench.pi  chains.pi  db.pi  db2.pi  du.pi  du2.pi  explore.dot  glob.pi  houses-abs-a.pi  houses-abs.pi  houses.pi  ideal.pi  ladder.pi  liststar.pi  lst.pi  minsky.pi  noconf.pi  overapprox.pi  pong.pi  prova.pi  stack.pi  stack2.pi  test.pi  testres.pi  tricky.pi  unbounded.pi  workers.pi
examples/typesys/: gsm.pi  hierarchical.pi  houses-abs.pi  houses-abs2.pi  ring-abs.pi  ring.pi  workers.pi
examples/typesys/benchmarks/: hierarchical-16.pi  hierarchical-4.pi  hierarchical-8.pi  ring-16.pi  ring-20.pi  ring-32.pi  tcompconfl-1.pi  tcompconfl-2.pi  tcompconfl-3.pi  tcompconfl-4.pi
src/: Analyse.hs  Benchmark.hs  Convert.hs  Explore.hs  Frontend.hs  JamesBound.hs  Options.hs  Type.hs  Version.hs
src/Data/: GraphVizEither.hs
src/Data/Graph/: Ullmann.hs
src/Data/Set/: Infix.hs
src/Language/: PiCalc.hs
src/Language/PiCalc/: Dot.hs  Infix.hs  Parser.hs  Pretty.hs  Semantics.hs  Syntax.hs
src/Language/PiCalc/Analysis/: HTest.hs  Hierarchical.hs  LTest.hs  Layered.hs  PetriNet.hs  SimpleTyping.hs
src/Language/PiCalc/Semantics/: Cover.hs  Process.hs  ReachTree.hs  Substitutions.hs
src/Language/PiCalc/Syntax/: AST.hs  Congruence.hs  Manipulations.hs  StdNF.hs  Term.hs
